# coGMan-ai

./: .gitignore  ABC成果总结与主控接手计划.md  README.md  gemini-hero-page-优化任务书.md  package-lock.json  package.json  start-dev.cmd  主要功能页面任务状态.md  主要功能页面小任务拆分清单.md  主要功能页面开发明细表.md  主要功能页面现状盘点.md  多对话协作任务调度.md  多对话独立工作区说明.md  项目步骤功能说明.md
apps/api/: README.md  pyproject.toml
apps/api/src/app/: ai_services.py  context_builder.py  main.py  models.py  prompt_registry.py  storage.py
apps/api/tests/: test_ai_contracts.py  test_asset_quality_gate.py  test_health.py  test_import_text.py
apps/web/: index.html  package.json
apps/web/src/: App.tsx  api.ts  components.css  components.tsx  data.ts  payload.ts  styles.css  types.ts
docs/: ai-model-capability-prompts.md  api-step-contract-plan.md  api-step-storage-plan.md  create-center-acceptance-checklist.md  create-center-acceptance-template.md  create-center-shared-layout-integration-plan.md  cross-step-data-flow-matrix.md  generation-asset-api-plan.md  json-storage-migration-plan.md  mobile-step-navigation-plan.md  project-progress-status-plan.md  step-01-story-structure-types.md  step-02-script-creation-types.md  step-03-asset-setting-types.md  step-04-storyboard-planning-types.md  step-05-prompt-generation-types.md  step-06-image-generation-types.md  step-07-quality-rework-types.md  step-08-video-generation-types.md  step-09-audio-subtitle-types.md  step-10-final-editing-types.md  step-11-publish-review-types.md  step-autosave-design.md
review/: agent-review-log.md
